remote_server: -Reduce splash screen size to prevent scrollbar from displaying

--- a/remote_server/docs/splash.css
+++ b/remote_server/docs/splash.css
@@ -3,8 +3,8 @@ body {
 } /* Adding !important forces the browser to overwrite the default style applied by Bootstrap */
   
 .vertical-center {
-    min-height: 100%;  /* Fallback for browsers do NOT support vh unit */
-    min-height: 100vh; /* These two lines are counted as one :-)       */
+    min-height: 95%;  /* Fallback for browsers do NOT support vh unit */
+    min-height: 95vh; /* These two lines are counted as one :-)       */
   
     display: flex;
     align-items: center;
